--- a/app/index.html
+++ b/app/index.html
@@ -60,6 +60,30 @@
           </div>
         </article>
 
+        <article class="card">
+          <div class="label">Temperatura</div>
+          <div class="row">
+            <div class="value" id="tempVal">—</div>
+            <span class="pill">°C</span>
+          </div>
+          <div class="thermo-wrap">
+            <div class="thermo" aria-label="termômetro">
+              <div class="thermo-fill" id="thermoFill" style="height:0%"></div>
+            </div>
+            <div class="thermo-scale">
+              <span>60</span><span>45</span><span>30</span><span>15</span><span>0</span>
+            </div>
+          </div>
+        </article>
+
+        <article class="card">
+          <div class="label">Umidade</div>
+          <div class="row">
+            <div class="value" id="humVal">—</div>
+            <span class="pill">%</span>
+          </div>
+        </article>
+
         <article class="card wide">
           <div class="row">
             <div class="label">Histórico (tempo de vida)</div>
