correlation temp umi

--- a/app/index.html
+++ b/app/index.html
@@ -95,6 +95,15 @@
             aponte para outro caminho, por ex.: <code>/sensores.json</code>.
           </div>
         </article>
+
+        <!-- NOVO: gráfico de correlação Temp x Umidade -->
+        <article class="card wide">
+          <div class="row">
+            <div class="label">Correlação: Temperatura × Umidade</div>
+            <div class="pill">Scatter + linha de tendência</div>
+          </div>
+          <canvas id="corrChart"></canvas>
+        </article>
       </section>
     </div>
 
