--- a/app/index.html
+++ b/app/index.html
@@ -84,6 +84,23 @@
           </div>
         </article>
 
+        <!-- NOVO: Potenciômetro -->
+        <article class="card">
+          <div class="label">Potenciômetro</div>
+          <div class="row">
+            <div class="value" id="potVal">—</div>
+            <span class="pill">0–100</span>
+          </div>
+          <div class="pot-wrap">
+            <div class="pot-track">
+              <div class="pot-fill" id="potFill" style="width:0%"></div>
+            </div>
+            <div class="pot-scale">
+              <span>0</span><span>25</span><span>50</span><span>75</span><span>100</span>
+            </div>
+          </div>
+        </article>
+
         <article class="card wide">
           <div class="row">
             <div class="label">Histórico (tempo de vida)</div>
@@ -96,7 +113,6 @@
           </div>
         </article>
 
-        <!-- NOVO: gráfico de correlação Temp x Umidade -->
         <article class="card wide">
           <div class="row">
             <div class="label">Correlação: Temperatura × Umidade</div>
