--- a/app/index.html
+++ b/app/index.html
@@ -53,7 +53,7 @@
           </div>
         </article>
         <article class="card">
-          <div class="label">Tempo de vida</div>
+          <div class="label">Tempo da Operação</div>
           <div class="row">
             <div class="value" id="tempoVal">—</div>
             <span class="pill" id="lastUpdate">—</span>
@@ -86,7 +86,7 @@
 
         <!-- Potenciômetro com feedback visual/sonoro -->
         <article class="card">
-          <div class="label">Potenciômetro</div>
+          <div class="label">Temperatura de Referencia Limite</div>
           <div class="row">
             <div class="value" id="potVal">—</div>
             <span class="pill" id="potZone">—</span>
@@ -107,7 +107,7 @@
 
         <article class="card wide">
           <div class="row">
-            <div class="label">Histórico (tempo de vida)</div>
+            <div class="label">Histórico (Tempo da Operação)</div>
             <div class="pill">Ao vivo</div>
           </div>
           <canvas id="tempoChart"></canvas>
